Modification du code index

--- a/index.html
+++ b/index.html
@@ -5,42 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page d'accueil TPTEST</title>
     <meta name="descrpition" content="Voici la page d'accueil du TPTEST en GIT">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <head>
+    <header>
         <p>HEADER</p>
-    </head>
+    </header>
 
 
     <nav>
-        <P>NAVIGATION</P>
+        <a href="index.html">Acceuil</a>
+        <a href="HTML/media.html">Media</a>
+        <a href="HTML/contact.html">Contact</a>
     </nav>
     
 
     <main>
 
         <section>
-            <p>section</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!</p>
         </section>
 
-        <article>
-            <p>article</p>
-        </article>
+
+        <img src="image/img2.jpg" alt="SEO">
 
         <section>
-            <p>section</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!</p>
         </section>
 
     </main>
 
 
     <aside>
-        <p>ASIDE</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, doloribus repellat, excepturi fuga quos autem laborum minus minima voluptatem rerum beatae architecto. Dolores natus quas consequatur ipsum neque omnis ab!Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
     </aside>
 
 
     <footer>
-        <p>FOOTER</p>
+        <p>© Copyright 2024</p>    
     </footer>
 
     
